# generic-scraper-1

./: .env.example  .gitignore  ARCHITECTURE.md  CRAWL4AI_RESEARCH.md  QA_REPORT.md  QA_REPORT_FINAL.md  README.md  pyproject.toml
scraper/: __init__.py  api.py  browser_backend.py  cli.py  config.py  exceptions.py  extraction.py  http_backend.py  models.py
