[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper"
version = "0.1.0"
description = "A web scraper library with LLM-based extraction, powered by crawl4ai"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yossef", email = "yossef@example.com" },
]
keywords = ["scraper", "web-scraping", "llm", "extraction", "crawl4ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "crawl4ai>=0.8.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
scraper = "scraper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
